hphp/test/zend/good/ext/standard/tests/url/base64_decode_variation_002.php.expectf
*** Testing base64_decode() : usage variations ***
Error: 8 - Undefined variable: undefined_var, %s(%d)
Error: 8 - Undefined variable: unset_var, %s(%d)

-- Arg value 0 --
string(12) "hello world!"

-- Arg value 1 --
bool(false)

-- Arg value 12345 --
bool(false)

-- Arg value -2345 --
bool(false)

-- Arg value 10.5 --
bool(false)

-- Arg value -10.5 --
bool(false)

-- Arg value 10.1234567e10 --
bool(false)

-- Arg value 10.7654321E-10 --
bool(false)

-- Arg value .5 --
bool(false)

-- Arg value array() --

Warning: base64_decode() expects parameter 2 to be boolean, array given in %s/hphp/test/zend/good/ext/standard/tests/url/base64_decode_variation_002.php on line 78

-- Arg value array(0) --

Warning: base64_decode() expects parameter 2 to be boolean, array given in %s/hphp/test/zend/good/ext/standard/tests/url/base64_decode_variation_002.php on line 78

-- Arg value array(1) --

Warning: base64_decode() expects parameter 2 to be boolean, array given in %s/hphp/test/zend/good/ext/standard/tests/url/base64_decode_variation_002.php on line 78

-- Arg value array(1, 2) --

Warning: base64_decode() expects parameter 2 to be boolean, array given in %s/hphp/test/zend/good/ext/standard/tests/url/base64_decode_variation_002.php on line 78

-- Arg value array('color' => 'red', 'item' => 'pen' --

Warning: base64_decode() expects parameter 2 to be boolean, array given in %s/hphp/test/zend/good/ext/standard/tests/url/base64_decode_variation_002.php on line 78

-- Arg value NULL --
string(12) "hello world!"

-- Arg value null --
string(12) "hello world!"

-- Arg value true --
bool(false)

-- Arg value false --
string(12) "hello world!"

-- Arg value TRUE --
bool(false)

-- Arg value FALSE --
string(12) "hello world!"

-- Arg value "" --
string(12) "hello world!"

-- Arg value '' --
string(12) "hello world!"

-- Arg value stdClass object --

Warning: base64_decode() expects parameter 2 to be boolean, object given in %s/hphp/test/zend/good/ext/standard/tests/url/base64_decode_variation_002.php on line 78

-- Arg value undefined variable --
string(12) "hello world!"

-- Arg value unset variable --
string(12) "hello world!"

-- Arg value resource --

Warning: base64_decode() expects parameter 2 to be boolean, resource given in %s/hphp/test/zend/good/ext/standard/tests/url/base64_decode_variation_002.php on line 78
===Done===
